fixed spacings

--- a/src/views/AboutUs/AboutUs.scss
+++ b/src/views/AboutUs/AboutUs.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   gap: 64px;
-  padding: 64px 0;
+  padding-top: 64px;
 }
 
 .about-us__scrumlr {
@@ -18,15 +18,16 @@
   background-size: contain;
   background-size: auto min(64vh, 1600px);
   background-position: 55%;
-  background-image: url("/assets/about/background_details_light.svg");
   gap: 10vw;
 }
 
 .about-us__scrumlr-text {
+  z-index: 1;
   display: flex;
   flex-direction: column;
   align-items: end;
   width: 50%;
+  margin: 32px 0;
 
   > * {
     width: 66%;
@@ -37,33 +38,111 @@
 
 .about-us__scrumlr-image {
   width: 50%;
+  z-index: 1;
 
   > img {
-    height: 50vh;
-    max-height: 1000px;
-    margin-top: 12vh;
-    margin-bottom: 2vh;
+    height: 16vh;
+    min-height: 420px;
+    max-height: 640px;
+    margin-bottom: -2vh;
+    margin-top: 2vh;
   }
 }
 
 .about-us__background {
   position: absolute;
-  height: 80%;
+  height: 100%;
   width: 100vw;
   object-fit: cover;
   z-index: -1;
 }
 
+.about-us__background-details {
+  position: absolute;
+  height: 140%;
+  object-fit: cover;
+  z-index: 0;
+}
+
 .about-us__cta {
   text-align: center;
+  background-color: #f4f8ff;
+  width: 100%;
+  padding: 64px 0;
+  margin-top: -64px;
+}
+
+.bold {
+  font-weight: 600;
 }
 
 [theme="dark"] {
+  .about-us__background {
+    content: url("/assets/about/background_dark.svg");
+  }
+
+  .about-us__background-details {
+    content: url("/assets/about/background_details_dark.svg");
+  }
+
+  .about-us__cta {
+    background-color: #1b2435;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .about-us {
+    gap: 0;
+  }
+
   .about-us__scrumlr {
-    background-image: url("/assets/about/background_details_dark.svg");
+    flex-direction: column;
+    gap: 0;
+    text-align: center;
+    padding: 64px 0 128px 0;
+    background-size: 100%;
+    background-position: 100% 180%;
+  }
+
+  .about-us__scrumlr-text {
+    width: 100%;
+    align-items: center;
+
+    > * {
+      width: 80%;
+    }
+  }
+
+  .about-us__scrumlr-image {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+    > img {
+      margin: 32px 0 16px 0;
+    }
   }
 
   .about-us__background {
-    content: url("/assets/about/background_dark.svg");
+    top: 0;
+    height: calc(100% - 128px);
+  }
+
+  .about-us__background-details {
+    content: url("/assets/about/background_details_light_mobile.svg");
+  }
+
+  .about-us__cta {
+    padding: 64px;
+    margin-top: -128px;
+
+    > h2 {
+      font-size: 24px;
+      z-index: 1;
+    }
+    > p {
+      font-size: 16px;
+      margin-bottom: 48px;
+    }
   }
 }
